# pdfrebuilder

./: .actrc  .cursorrules  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .secrets.baseline  .vulture_whitelist  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_LOG_font_integration_workflows.md  Dockerfile  LICENSE  Makefile  README.md  SUBPROCESS_MIGRATION_COMPLETION_SUMMARY.md  TODO.md  coverage.json  docker-compose.yaml  migration_plan.json  pyproject.toml  pyproject.toml.backup  temp_test_fix.py
.amazonq/rules/: defaultrule.md
.github/workflows/: ci.yml  dependency-updates.yml  docs.yml  documentation.yml  security.yml  type-check.yml
.kiro/hooks/: README.md  font-system-maintenance.json  pre-commit-check.json  pytest-validation-check.json  test-organization-check.json
.kiro/monitoring/: documentation_monitoring.json  last_check.json
.kiro/steering/: config-format.md  product.md  structure.md  tech.md
debug/: debug_google_fonts.py  debug_path_issue.py  debug_ssim.py
docs/: API.md  ARCHITECTURE.md  BANDIT_SUPPRESSIONS.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  EXAMPLES.md  GEMINI.md  INSTALL-dev.md  INSTALLATION.md  MAINTENANCE.md  MAKEFILE_GUIDE.md  MIGRATION.md  OPTIONAL_DEPENDENCIES.md  QUICK_INSTALL.md  README.md  REPORTLAB_ENGINE.md  SECURITY.md  SECURITY_CI.md  SECURITY_IMPROVEMENTS.md  SPHINX_USAGE.md  SUBPROCESS_ALTERNATIVES_EVALUATION.md  SUBPROCESS_DEVELOPER_GUIDELINES.md  SUBPROCESS_MIGRATION_SUMMARY.md  SUBPROCESS_SECURITY_GUIDE.md  SUBPROCESS_SECURITY_RESEARCH.md  TODO.md  VULTURE_WHITELIST_MAINTENANCE.md  __init__.py  deployment_manifest.json  final_validation_report.json  font_fallback_logic.md  index.json  validation_config.json
docs/api/: COMPREHENSIVE_GUIDE.md  README.md  compare_pdfs_visual.md  font_utils.md  fritz.md  generate_debug_pdf_layers.md  pdf_engine.md  recreate_pdf_from_config.md  render.md  settings.md  test_logging.md
docs/examples/: README.md  api_usage_examples.py
docs/guides/: advanced-usage.md  batch-processing.md  code-quality-guidelines.md  engine_selection.md  getting-started.md  hash-security-guidelines.md  human-review-testing.md  logging.md  output_engine_selection.md  troubleshooting.md  visual-validation.md
docs/maintenance/: code-quality-checklist.md
docs/reference/: cli.md  configuration.md  error-codes.md
docs/reports/: ALIGNMENT_IMPLEMENTATION_SUMMARY.md  CODE_QUALITY_FIXES_SUMMARY.md  COVERAGE_SUMMARY.md  DUPLICATE_MODULE_RESOLUTION.md  FONT_SECURITY_HARDENING_SUMMARY.md  README.md  SECURITY_REFACTORING_SUMMARY.md  SUBPROCESS_REFACTORING_COMPLETION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_FIXES_SUMMARY.md  TEST_REORGANIZATION_SUMMARY.md  WAND_ENGINE_IMPLEMENTATION_SUMMARY.md  WAND_MULTI_FORMAT_IMPLEMENTATION.md  final_security_validation_report.md  security_issues_resolution_report.md  security_validation_report.md  subprocess_migration_plan.md  subprocess_migration_progress.md  subprocess_migration_summary.md  subprocess_refactoring_summary.md
docs/source/: conf.py  index.rst
docs/specs/: cli-library-architecture-design.md  cli-library-architecture-requirements.md  cli-library-architecture-tasks.md  code-quality-cleanup-design.md  code-quality-cleanup-requirements.md  code-quality-cleanup-tasks.md  documentation-update-design.md  documentation-update-requirements.md
docs/tools/: __init__.py  api_generator.py  api_validator.py  coverage_reporter.py  validation.py
examples/: IMPLEMENTATION_SUMMARY.md  README.md  advanced_configuration.py  advanced_configuration.py.backup  batch_modification_example.py  batch_modification_example.py.backup  batch_processing_examples.py  batch_processing_examples.py.backup  comprehensive_example.py  comprehensive_example.py.backup  directory_setup_demo.py  directory_setup_demo.py.backup  engine_comparison.py  engine_comparison.py.backup  engine_selection_examples.py  engine_selection_examples.py.backup  extract_sample.py  extract_sample.py.backup  pdf_processing_examples.py  pdf_processing_examples.py.backup  pdfrebuilder-example.toml  psd_processing_examples.py  psd_processing_examples.py.backup  subprocess_migration_example.py  subprocess_migration_example.py.backup  validation.py  wand_engine_example.py  wand_engine_example.py.backup  wand_multi_format_example.py  wand_multi_format_example.py.backup
examples/configs/: high_performance.json  memory_efficient.json  quality_focused.json
examples/engine_configurations/: README.md  balanced.json  memory_optimized.json  quality_optimized.json  speed_optimized.json
examples/migration/: migrate_project_configs.py
fonts/: README.md
fonts/auto/: .gitkeep
scripts/: README.md  README_fonts.md  autofix.py  autofix.py.backup  ci.sh  cleanup_old_files.py  cleanup_old_files.py.backup  debug_api_refs.py  deploy_documentation.py  documentation_maintenance.py  documentation_quality_assurance.py  download_essential_fonts.py  download_essential_fonts.py.backup  fix_json_examples.py  generate_debug_pdf_layers.py  generate_debug_pdf_layers.py.backup  generate_final_validation_report.py  import_transformer.py  import_transformer.py.backup  migration_analysis.py  migration_analysis.py.backup  migration_validator.py  run_conversion.py  run_coverage_tests.py  run_documentation_tests.py  run_specific_tests.py  security_validation.py  setup_security_ci.py  subprocess_migration_audit.py  subprocess_migration_audit.py.backup  test_subprocess_migration_compatibility.py  update-stubs.py  update_dependencies.py  update_documentation.py  update_documentation.py.backup  validate_bandit_config.py  validate_batch_modification.py  validate_batch_modification.py.backup  validate_docs.py  validate_hash_usage.py  (+4 more)
scripts/maintenance/: README.md  (+1 more)
tests/: BACKWARD_COMPATIBILITY_TESTING.md  README.md  README_BACKWARD_COMPATIBILITY.md  README_FIXTURES.md  README_FONT_TESTS.md  README_optional_dependencies.md  config.py  config.py.backup  conftest.py  conftest.py.backup  human_review_README.md  security_scan_results.md
(+441 files in other folders)
